horizontal scroll bar fixed

--- a/src/components/styles.css/styles.css
+++ b/src/components/styles.css/styles.css
@@ -9,7 +9,6 @@
 }
 
 .shopMS__container {
-    width: 100%;
     min-width: 480px;
     margin: 0 auto;
     background-color: var(--primary-background);
